# ucl_module_chat

./: .gitignore  .huggingface.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: format.yaml  hf_sync.yaml  lint.yaml
data/module_catalogue_vectorstore/: index.faiss  index.pkl
src/ucl_module_chat/: setup.py
src/ucl_module_chat/chains/: rag_chain.py
src/ucl_module_chat/conf/: config.yaml
src/ucl_module_chat/data_processing/: document_conversion.py  document_embedding.py  document_scraping.py  document_templates.py
src/ucl_module_chat/utils/: resolve_paths.py
